<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mainPageAbout"
        android:title="Main page"
        android:icon="@drawable/baseline_home_white_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/coolapkContact"
        android:title="@string/coolapk_contact"
        android:icon="@drawable/baseline_person_search_black_24dp"
        app:showAsAction="never"/>
    <item
        android:id="@+id/blogContact"
        android:title="@string/blog_contact"
        android:icon="@drawable/baseline_computer_black_24dp"
        app:showAsAction="never"/>
    <item
        android:id="@+id/moreSay"
        android:title="@string/things_to_say"
        android:icon="@drawable/baseline_message_black_24dp"
        app:showAsAction="never"/>
</menu>